objects/Work_Log__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>Work Logs</relationshipLabel>
        <relationshipName>Work_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent_hours__c</fullName>
        <inlineHelpText>Time that you spent working on this item, provided in hours.</inlineHelpText>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story_Status__c</fullName>
        <description>This field should be automatically populated with the value of the US status field in Time Spent Rollup Flow.</description>
        <label>User Story Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Task this work log has time on.</description>
        <label>User Story Task</label>
        <referenceTo>copado__User_Story_Task__c</referenceTo>
        <relationshipLabel>Work Logs</relationshipLabel>
        <relationshipName>Work_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User Story this work log has time on.</description>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Work Logs</relationshipLabel>
        <relationshipName>Work_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Log</label>
    <nameField>
        <displayFormat>WL-{0000000}</displayFormat>
        <label>Work Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Time_Spent_must_be_at_least_1_hour</fullName>
        <active>true</active>
        <description>This rule prevents from logging 0 or negative time.</description>
        <errorConditionFormula>Time_Spent_hours__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>Time_Spent_hours__c</errorDisplayField>
        <errorMessage>Time Spent must be at least 1 hour.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Log_Single_Lookup</fullName>
        <active>true</active>
        <description>This rule checks if the work log has only User Story or User Story Task assigned.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( User_Story_Task__c ) ) ,  NOT( ISBLANK( User_Story__c ) ) )</errorConditionFormula>
        <errorMessage>You cannot have a Work Log assigned to both User Story and a User Story Task at the same time. Time spent will be automatically rolled up from User Story Tasks and the User Story itself.</errorMessage>
    </validationRules>
</CustomObject>